--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
+        </style>
+    <title>Coco</title>
+</head>
+<body>
+    <div class="wrapper">
+        <div class="text">
+            <img src="images/logo.png">  
+            <h1>Wat als je de familie zou kunnen ontmoeten die voor jou kwam...</h1>
+            <p> Ambitieuze muzikant Miguel bundelt zijn krachten met de charmante bedrieger Hector op een 
+                buitengewone reis door het kleurrijke Land der Doden om zijn familiegeschiedenis te onthullen.
+            <p>
+            <a href="https://www.liveabout.com/thmb/dLFvPOdlmo68gA3gy2kx3nRQKt4=/1000x540/filters:no_upscale():max_bytes(150000):strip_icc()/SpiritedAwayMeme07-56d647dc3df78cfb37da619c.jpg">TICKETS</a>
+        </div> 
+        
+    </div>
+</body>
+</html>
